Initial augmented metadata implementation